[tool.poetry]
name = "linnian-tiny-py-chatter"
version = "0.1.0"
description = "qwq"
authors = ["LinNian"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ujson = "^4.0.2"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
